# jumpstart

./: .dockerignore  .editorconfig  .gitignore  0BsdTemplate.txt  Dockerfile  GeneratedLicense.txt  LICENSE  README.md  build_demo.sh  build_skels.sh  docker-jumpstart  jumpstart.py  option.py  requirements.test.txt  requirements.txt  start.sh  test.py  test.sh  test_all.py  test_all.sh
templates/: .clang-tidy  .editorconfig  .gitignore  @name@CPack.cmake  @name@CPackOptions.cmake  CMakeLists.txt  README.md  conanfile.py  sonar-project.properties.in
templates/CMakeModules/: FindGMock.cmake
templates/include/@namespace@/: @name@.h
templates/include/wsbu/: @name@.h
templates/scripts/: @name@.init
templates/src/: @name@-cli.h  @name@-cli@extension@  @name@@extension@  CMakeLists.txt  main@extension@
templates/test_package/: @name@TestConan.cpp  CMakeLists.txt  conanfile.py
templates/tests/: @name@-cliTest.cpp  @name@Test.cpp  CMakeLists.txt
